# ouroboros

./: .env.template  .gitignore  BIBLE.md  INIT_GIT.bat  LOCAL_SETUP.md  README.md  SETUP.bat  START.bat  STOP.bat  brain_injector.py  cognitive_config.json  colab_bootstrap_shim.py  colab_launcher.py  demo_neuro_agent.py  local_config.py  local_launcher.py  migration_plan.md  ollama-pull.ps1  pyproject.toml  requirements.txt  run_cognitive_agent.py  scanner.py  strip_emoji.py  test_brain_load.py  test_cognitive_ecosystem.py  test_cognitive_simple.py  test_cogsys.py  test_ecosystem_simple.py
data/local_state/: graph.json
data/local_state/logs/: chat.jsonl  events.jsonl  progress.jsonl  supervisor.jsonl  tools.jsonl
data/local_state/memory/: desktop_commands.jsonl  identity.md  scratchpad.md  scratchpad_journal.jsonl
desktop/: server.py
ouroboros/: agent.py  agent.py.new  agent_v2.py  brain.py  cognitive_agent.py  cognitive_ecosystem.py  consciousness.py  context.py  file_builder.py  graph.py  integrated_agent.py  intelligent_core.py  llm.py  local_core.py  loop.py  memory.py  neuro_agent.py  neuro_evolution.py  research.py
ouroboros/tools/: compact_context.py  control.py  core.py  desktop.py  evolution_stats.py  git.py  github.py  health.py  knowledge.py  neuro_symbiotic_tool.py  registry.py  research.py  review.py  search.py  shell.py  tool_discovery.py  vision.py
prompts/: CONSCIOUSNESS.md  SYSTEM.md
supervisor/: events.py  git_ops.py  queue.py  state.py  telegram.py  workers.py
tests/: test_cognitive_ecosystem.py  test_smoke.py  test_vision.py
(+28 files in other folders)
