[project]
name = "ouroboros"
version = "6.6.0"
description = "Self-creating agent"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
    "python-telegram-bot",
    "rich",
    "psutil",
    "pyyaml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
