[project]
name = "ouroboros"
version = "7.0.0"
description = "CPU Migration Researcher — AI agent focused on finding ways to run frontier AI on CPU-only hardware"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
    "python-telegram-bot",
    "rich",
    "psutil",
    "pyyaml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
